<resources>
    <string name="app_name">Weight Manager</string>
    <string name="date">날 짜</string>
    <string name="weight">체 중</string>
    <string name="height">키</string>
    <string name="input">입 력</string>
    <string name="show">표 시</string>
    <string name="calculateBMI">BMI 계산</string>
    <string name="underweight">저체중</string>
    <string name="normal">정상 체중</string>
    <string name="overweight">비만</string>
    <string name="obese_class_i">경도비만</string>
    <string name="obese_class_ii">중등도비만</string>
    <string name="obese_class_iii">고도비만</string>
    <string name="title_activity_navi">NaviActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Project</string>
    <string name="nav_header_subtitle">배윤근 / 류두현</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_info">회원 정보</string>
    <string name="menu_bmiSimulator">BMI 시뮬레이터</string>
    <string name="menu_workKcal">운동 별 칼로리</string>
    <string name="menu_weightGraph">체중 그래프 / 리스트</string>
    <string name="menu_eatingKcal">섭취 칼로리</string>
    <string name="menu_videoView">운동법(영상)</string>
    <string name="menu_setting">설정</string>
    <string name="logout">로 그 아 웃</string>
    <string name="accdelete">회 원 탈 퇴</string>
    <string name="facebook_app_id">699639120597554</string>
    <string name="fb_login_protocol_scheme">fb699639120597554</string>
    <!-- TODO: Remove or change this placeholder text -->

</resources>